Removed ExchangeType, rid of incoming request requirement, renamed Notification